# server

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
app/: __init__.py  config.py  database.py  main.py  models.py  repository.py  schema.sql  seed.sql
app/api/: chatbot.py  health.py  real_estate.py  router.py
app/chatbot/: __init__.py  types.py
app/comparison/: __init__.py  (+3 more)
docs/: chatbot-llm-agent-tool-flow.md  h1-simple-lookup-design.md
scripts/: build-pois-csv.py  import-sql.sh  run_chatbot_model_eval.py  run_chatbot_qa.py
tests/: chatbot_answer_helpers.py  conftest.py  manual_price_trend_console.py  test_chatbot_agent.py  test_chatbot_answer_composer.py  test_chatbot_answer_context.py  test_chatbot_answer_fallback.py  test_chatbot_answer_formatters.py  test_chatbot_baseline.py  test_chatbot_controller.py  test_chatbot_dedupe.py  test_chatbot_handlers.py  test_chatbot_model_eval_runner.py  test_chatbot_orchestrator.py  test_chatbot_planner.py  test_chatbot_qa_runner.py  test_chatbot_service.py  test_chatbot_streaming.py  test_chatbot_supervisor.py  test_chatbot_ui_payload.py  test_complex_resolver.py  test_conversation_memory.py  test_embedding_service.py  test_embeddings.py  test_import_data_refresh.py  test_legal_rag_answer.py  test_legal_rag_parser.py  test_legal_rag_query.py  test_legal_rag_query_intent.py  test_legal_rag_query_ranking.py  test_legal_rag_routing.py  test_package_boundaries.py  test_price_trend.py  test_public_api.py  test_simple_lookup.py  test_term_mapping_parser.py
(+284 files in other folders)
