[project]
name = "gangnam-real-estate-api"
version = "0.1.0"
description = "FastAPI read API for Gangnam three-district apartment trades"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
