[project]
name = "gangnam-real-estate-api"
version = "0.1.0"
description = "FastAPI read API for Gangnam three-district apartment trades"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "langchain>=0.3",
  "langchain-openai>=0.2",
  "openai>=1.50",
  "pgvector>=0.3",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "tiktoken>=0.8",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
